# agent-os

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
agent_os/: __init__.py  agent_memory.py  allowlist.py  approvals.py  audit.py  cli.py  command_router.py  context.py  daily_eval.py  doctor.py  health.py  hooks.py  improvement.py  insights.py  jobs.py  logging_setup.py  mcp.py  metering.py  onboarding.py  orchestrator.py  packs.py  profiles.py  providers.py  reasoners.py  reliability.py  risk.py  runner.py  skill_registry.py  skill_synth.py  supervisor.py  token_health.py  trace_recorder.py  webui.py
agent_state/: MEMORY.md  USER.md
deploy/: README.md  agent-os.service  allowlist.example.txt  cloudflared-config.example.yml  com.agentos.bridge.plist  daily-eval.github-action.yml
docs/: architecture.md  brain.md  code-review.md  extending.md  index.html  insights.md  install-and-ui.md  mcp.md  no-terminal.md  orchestrator.md  providers.md  roadmap.md  skills.md
examples/: ahaan_maths_demo.py  demo_run.py  mcp.json  multiday_digest_demo.py  podcast_digest_demo.py  provider_demo.py
launchers/: agent-os-linux.sh  agent-os-macos.command  agent-os-windows.bat
tests/: mcp_fake_server.py  test_agent_memory.py  test_audit.py  test_command_router.py  test_context.py  test_doctor.py  test_health_allowlist_token.py  test_hooks.py  test_insights.py  test_jobs.py  test_launchers.py  test_mcp.py  test_metering.py  test_onboarding.py  test_orchestrator.py  test_packs.py  test_runner.py  (+9 more)
(+21 files in other folders)
